--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
         <title>Russian travel</title>
     </head>
     <body>
+
         <div class="root">
+
             <header class="header">
                 <img class="header__logo" src="./images/__logo.svg" alt="логотип" />
                 <div class="header__lang-links">
-                    <img class="header__lang-link" src="./images/__lang-link_ru.svg" alt="язык" />
-                    <img class="header__lang-link" src="./images/__lang-link_eng.svg" alt="язык" />
+                    <a class="header__lang-link" href="#">RU</a>
+                    <a class="header__lang-link" href="#">EN</a>
                 </div>
             </header>
 
             <main class="content">
+
                 <section class="lead">
                     <h1 class="lead__title">Путешествия по России</h1>
                     <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-                    <div class="lead__image">
-                        <img class="lead__group-4" src="./images/Group_4.png" alt="маршрут" />
-                    </div>
+                    <img class='lead__image' src="./images/__lead_image.png" alt='окно в поезде'>
                     <p class="lead__caption">ваша полка — верхняя</p>
                 </section>
 
@@ -145,14 +146,14 @@
                     </div>
                 </section>
 
-                <section class="cover">
-                    <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                        До Байкала<br />
-                        «на собаках»
-                    </a>
-                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                <section class='cover'>
+                    <a class='cover__link' href='https://stampsy.com/na-elektrichkakh-do-baikala' target="_blank">
+                        <h2 class="cover__title">До Байкала «на собаках»</h2>
+                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                        </a>
                 </section>
             </main>
+
 
             <footer class="footer">
                 <div class="footer__links">
@@ -164,6 +165,7 @@
                 </div>
                 <div class="footer__copyright">© 2020. Костин Павел</div>
             </footer>
+            
         </div>
     </body>
 </html>
