--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <header class="header">
                 <img class="header__logo" src="./images/__logo.svg" alt="логотип" />
                 <div class="header__lang-links">
-                    <a class="header__lang-link" href="#">RU</a>
-                    <a class="header__lang-link" href="#">EN</a>
+                    <a class="header__lang-link" href="#" target="_blank">RU</a>
+                    <a class="header__lang-link" href="#" target="_blank">EN</a>
                 </div>
             </header>
 
