--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                 </section>
 
                 <section class="intro">
-                    <div class="left">
                         <h2 class="intro__title">Чего мы там не видели?</h2>
                         <p class="intro__text">
                             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
@@ -33,13 +32,12 @@
                             взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
                         </p>
                         <ul class="intro__list">
-                            <li>Часовых поясов <span class="intro__list intro__list_normal">11</span></li>
-                            <li>Объектов природного наследия ЮНЕСКО <span class="intro__list intro__list_normal">12</span></li>
-                            <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list intro__list_normal">16</span></li>
-                            <li>Природных заповедников <span class="intro__list intro__list_normal">105</span></li>
-                            <li>Аэропортов <span class="intro__list intro__list_normal">241</span></li>
+                            <li>Часовых поясов <span class="intro__span-accent">11</span></li>
+                            <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+                            <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+                            <li>Природных заповедников <span class="intro__span-accent">105</span></li>
+                            <li>Аэропортов <span class="intro__span-accent">241</span></li>
                         </ul>
-                    </div>
                 </section>
 
                 <section class="photo-grid">
